inserted demo of secnumdepth v label

--- a/_output.yml
+++ b/_output.yml
@@ -10,7 +10,6 @@ bookdown::gitbook:
       link: https://github.com/rstudio/bookdown-demo/edit/master/%s
   pandoc_args:
     - "--default-image-extension=png"
-    - "--variable secnumdepth=3"
 bookdown::pdf_book:
   includes:
     in_header: preamble.tex
@@ -18,8 +17,8 @@ bookdown::pdf_book:
   citation_package: natbib
   pandoc_args:
     - "--default-image-extension=pdf"
-    - "--variable secnumdepth=3"
+    - "--template"
+    - "latex.template"
 bookdown::epub_book: #default
   pandoc_args:
     - "--default-image-extension=png"
-    - "--variable secnumdepth=3"
