--- a/_output.yml
+++ b/_output.yml
@@ -18,7 +18,7 @@ bookdown::pdf_book:
   pandoc_args:
     - "--default-image-extension=pdf"
     - "--template"
-    - "latex.template"
+    - "template.latex"
 bookdown::epub_book: #default
   pandoc_args:
     - "--default-image-extension=png"
