--- a/_output.yml
+++ b/_output.yml
@@ -3,11 +3,11 @@ bookdown::gitbook:
   config:
     toc:
       before: |
-        <li><a href="./">A Minimal Book Example</a></li>
+        <li><a href="./">MY451 Introduction to Quantitative Analysis</a></li>
       after: |
-        <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
+        <li><a href="https://github.com/kbenoit/coursepack-bookdown/" target="blank">Published with bookdown</a></li>
     edit:
-      link: https://github.com/rstudio/bookdown-demo/edit/master/%s
+      link: https://github.com/kbenoit/coursepack-bookdown/edit/master/%s
   pandoc_args:
     - "--default-image-extension=png"
 bookdown::pdf_book:
