--- a/_output.yml
+++ b/_output.yml
@@ -11,6 +11,7 @@ bookdown::gitbook:
       link: https://github.com/kbenoit/coursepack-bookdown/edit/master/%s
   pandoc_args:
     - "--default-image-extension=png"
+    - "--file-scope"
 bookdown::pdf_book:
   includes:
     in_header: preamble.tex
@@ -20,6 +21,8 @@ bookdown::pdf_book:
     - "--default-image-extension=pdf"
     - "--template"
     - "template.latex"
+    - "-V"
+    - "lot"
 bookdown::epub_book: #default
   pandoc_args:
     - "--default-image-extension=png"
