specified email notifications for Travis builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,7 @@ before_script:
 script:
 - "./_build.sh"
 - "./_deploy.sh"
+notifications:
+  email:
+    on_success: change # default: change
+    on_failure: change # default: always
