--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,5 @@ script:
 - "./_deploy.sh"
 notifications:
   email:
-    on_success: change # default: change
-    on_failure: change # default: always
+    on_success: always
+    on_failure: always
