--- a/_output.yml
+++ b/_output.yml
@@ -1,16 +1,3 @@
-bookdown::gitbook:
-  css: style.css
-  config:
-    toc:
-      collapse: section
-      before: |
-        <li><a href="./">MY451 Introduction to Quantitative Analysis</a></li>
-      after: |
-        <li><a href="https://github.com/kbenoit/coursepack-bookdown/">Published with bookdown</a></li>
-    edit:
-      link: https://github.com/kbenoit/coursepack-bookdown/edit/master/%s
-  pandoc_args:
-    - "--default-image-extension=png"
 bookdown::pdf_book:
   latex_engine: xelatex
   citation_package: natbib
@@ -19,5 +6,18 @@ bookdown::pdf_book:
     - "--template"
     - "./pandoc-conversion-templates/template.latex"
 bookdown::epub_book:
+  pandoc_args:
+    - "--default-image-extension=png"
+bookdown::gitbook:
+  css: style.css
+  config:
+    toc:
+      collapse: section
+      before: |
+        <li><a href="./">MY451 Introduction to Quantitative Analysis</a></li>
+      after: |
+        <li><a href="https://github.com/rstudio/bookdown">Published with bookdown</a></li>
+    edit:
+      link: https://github.com/kbenoit/coursepack-bookdown/edit/master/%s
   pandoc_args:
     - "--default-image-extension=png"
